// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignPlan renders correctly 1`] = `
"<div className=\\"page campaign_plan-view\\">
  <Container>
    <div className=\\"campaign_plan-view__subnav\\">
      <ButtonGroup onChange={[Function]} value=\\"overview\\" options={{...}} />
    </div>
    <CampaignPlanOverviewTab theme=\\"Variable by audience, market, and asset\\" target_segments={{...}} goal=\\"Achieve 95% lease-up by 6/30/2019\\" objectives={{...}} assumptions=\\"* Asset contains 260 units\\\\n* 20% C&D rate\\\\n* Model based on predictions generated in Sept. 2018\\" schedule=\\"Campaign begins in Feb. 2019 and finishes in July 2019\\" target_investments={{...}} />
  </Container>
</div>"
`;

exports[`CampaignPlan renders correctly 2`] = `
"<div className=\\"page campaign_plan-view\\">
  <Container>
    <div className=\\"campaign_plan-view__subnav\\">
      <ButtonGroup onChange={[Function]} value=\\"reputation_building\\" options={{...}} />
    </div>
    <CampaignPlanGenericTab tactics={{...}} tabKey=\\"reputation_building\\" />
  </Container>
</div>"
`;
